# agent-trace

./: AGENTS.md  README.md  action.yml  pyproject.toml
.github/workflows/: publish.yml  release.yml
ADRs/: 0002-ndjson-file-storage-no-database.md  0011-otlp-genai-semantic-conventions.md  0012-server-side-event-collector.md
crates/agent-trace-core/: Cargo.toml  README.md  pyproject.toml
crates/agent-trace-core/src/: import.rs  lib.rs  models.rs
docs/: agents-md-integration.md  commands.md  integrations.md  production.md  security.md  server.md  setup.md  vscode.md
examples/ci/: agent-eval.yml
src/agent_trace/: __init__.py  annotate.py  anonymize.py  approval.py  audit.py  auto.py  baseline.py  budget_report.py  cli.py  cognitive_debt.py  compare.py  compliance.py  config_watch.py  context_score.py  dashboard.py  decorator.py  drift.py  freeze.py  freshness.py  hooks.py  http_proxy.py  iac.py  identity.py  jsonl_import.py  langfuse_export.py  lint.py  mcp_scan.py  mcp_server.py  models.py  notify.py  optimize.py  otlp.py  postmortem.py  project_budget.py  propagation.py  rbac.py  redact.py  replay.py  retention.py  sample.py  (+9 more)
src/agent_trace/eval/: dataset.py  runner.py  scorers.py
src/agent_trace/integrations/: __init__.py  _base.py  anthropic.py  crewai.py  langchain.py  litellm.py  openai.py  openai_agents.py  strands.py
tests/: test_annotate.py  test_anonymize.py  test_approval.py  test_auto_instrument.py  test_baseline.py  test_budget_report.py  test_codex_hooks.py  test_cognitive_debt.py  test_compare.py  test_compliance.py  test_config_watch.py  test_context_score.py  test_copilot_hooks.py  test_cursor_hooks.py  test_dashboard_trend.py  test_decorator.py  test_drift.py  test_eval_extensions.py  test_freeze.py  test_freshness.py  test_gemini_hooks.py  test_hash_chain.py  test_hooks.py  test_iac.py  test_identity.py  test_jsonl_import.py  test_langfuse_export.py  test_lint.py  test_mcp_scan.py  test_mcp_server.py  test_notify.py  test_optimize.py  test_otlp_genai.py  test_postmortem_crash.py  test_project_budget.py  test_propagation.py  test_rbac.py  test_redact.py  test_replay_diff.py  test_replay_perf.py  (+15 more)
vscode-extension/: README.md  package.json
vscode-extension/src/: extension.ts  liveStream.ts  postMortem.ts  sessionTree.ts  statusBar.ts
