[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-strace"
dynamic = ["version"]
description = "strace for AI agents. Capture and replay every tool call, LLM request, and decision point."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Siddhant Khare", email = "siddhantkhare2694@gmail.com" }
]
keywords = ["ai", "agents", "observability", "tracing", "mcp", "llm", "tool-calls"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Monitoring",
]

[project.optional-dependencies]
openai-agents = ["openai-agents>=0.0.1"]
langchain = ["langchain-core>=0.1.0"]
litellm = ["litellm>=1.0.0"]
anthropic = ["anthropic>=0.20.0"]
openai = ["openai>=1.0.0"]
strands = ["strands-agents>=0.1.0"]
crewai = ["crewai>=0.28.0"]
oidc = ["authlib>=1.3.0"]
all-integrations = [
    "openai-agents>=0.0.1",
    "langchain-core>=0.1.0",
    "litellm>=1.0.0",
    "anthropic>=0.20.0",
    "openai>=1.0.0",
    "strands-agents>=0.1.0",
    "crewai>=0.28.0",
]

[project.scripts]
agent-strace = "agent_trace.cli:main"

[project.urls]
Homepage = "https://github.com/Siddhant-K-code/agent-trace"
Repository = "https://github.com/Siddhant-K-code/agent-trace"
Issues = "https://github.com/Siddhant-K-code/agent-trace/issues"
Documentation = "https://github.com/Siddhant-K-code/agent-trace#readme"

[tool.hatch.version]
path = "src/agent_trace/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_trace"]
